--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green">#FF3cba54</color>
+    <color name="red">#FFdb3236</color>
+    <color name="blue">#FF4885ed</color>
+    <color name="yellow">#FFf4c20d</color>
 </resources>
